@@ -52,6 +52,7 @@ OTHER CONTRIBUTORS
 	Alexander Rabi
 	James Roth
 	Albrecht Schlosser
+	Jamie Snape
 	Andrea Suatoni
 	Michael Surette
 	Paul Sydney
